--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 </head>
 
 <body>
+    <div class="loaderArea">
+        <div class="loader"></div>
+    </div>
 
     <header class="header">
         <div class="container">
