--- a/terms.html
+++ b/terms.html
@@ -62,17 +62,19 @@
                 <h1 class="terms-title">Terms of Use</h1>
 
                 <ul class="terms-list">
-                    <li class="terms-list__subtitle">You can subscribe for premium account to browse web security without any ads, protects your privacy and to work with Wi-Fi and cellular.</li>
-                    <li class="terms-list__subtitle">Subscription is from $11,99 USD weekly, $34,49 USD monthly and $99,99 USD yearly.</li>
+                    <li class="terms-list__subtitle">You can subscribe to a premium account to enjoy unlimited Ai Enhancer services and no photo processing restrictions.
+- Subscription is from $11,49 USD weekly, $24,49 USD monthly and $85,99 USD yearly.</li>
+                    <li class="terms-list__subtitle">Subscription is from $11,49 USD weekly, $24,49 USD monthly and $85,99 USD yearly.</li>
+                    <li class="terms-list__subtitle">You can buy photo processing kits to process a certain number of photos.</li>
+                    <li class="terms-list__subtitle">Purchase is from $24,99 USD - 50 items, $49,99 USD - 100 items , $79,49 USD - 150 items.</li>
                     <li class="terms-list__subtitle">All prices are subject to change without notification. We occasionally run promotion prices as incentives or limited time opportunities for qualifying purchases made during the promotional time period. Due to the time sensitive and promotional nature of these events, we are unable to offer price protection or retroactive discounts or refunds for previous purchases in the event of a price reduction or promotional offering.</li>
-                    <li class="terms-list__subtitle">Payment will be charged to iTunes Acoount at confirmation of purchase.</li>
+                    <li class="terms-list__subtitle">Payment will be charged to iTunes Acount at confirmation of purchase.</li>
                     <li class="terms-list__subtitle">Subscription automatically renews for the same price and duration period as the original "one month"/"one year" package unless auto-renew is turned off at least 24-hours before the end of the current period</li>
                     <li class="terms-list__subtitle">Account will be charged for renewal within 24-hours prior to the end of the current period at the cost of the chosen package (monthly or yearly package)</li>
                     <li class="terms-list__subtitle">Subscriptions may be managed by the user and auto-renewal may be turned off by going to the user's iTunes Account Settings after purchase</li>
                     <li class="terms-list__subtitle">No cancellation of the current subscription is allowed during active subscription period</li>
-                    <li class="terms-list__subtitle">You may cancel a subscription during its free trial period via the subscription setting through your iTunes account. This must be done 24 hours before the end of the subscription period to avoid being charged. Please visit https://support.apple.com/en-us/HT202039 for more information </li>
+                    <li class="terms-list__subtitle">You can cancel your subscription in the settings in the subscription settings in your iTunes account. Visit https://support.apple.com/en-us/HT202039 for more information.</li>
                     <li class="terms-list__subtitle">You may turn off the auto-renewal of your subscription via your iTunes Account Settings. However, you are not able to cancel the current subscription during its active period</li>
-                    <li class="terms-list__subtitle">Any unused portion of a free-trial period, will be forfeited when the user purchases a subscription</li>
                 </ul>
             </div>
         </div>
